--- a/calculator-level-3.css
+++ b/calculator-level-3.css
@@ -157,6 +157,9 @@ button:active
 }
 
 @media screen and (width : 400px) {
+    .main-div
+    {
+        height: 90vh;
     .main-ctn
     {
         width: 100%;
