--- a/calculator-level-3.css
+++ b/calculator-level-3.css
@@ -149,6 +149,7 @@ button:active
 @media screen and (width : 400px) {
     .main-div
     {
+        width: 100%;
         height: 90vh;
     .main-ctn
     {
