--- a/calculator-level-3.css
+++ b/calculator-level-3.css
@@ -9,7 +9,17 @@ body
     display: flex;
 }
 
+.main-div
+{
+    width: 100%;
+    height: 100vh;
 
+    background: #fff;
+
+    display: flex;
+
+    position: absolute;
+}
 .main-ctn
 {
     width: 300px;
