--- a/calculator-level-3.css
+++ b/calculator-level-3.css
@@ -156,14 +156,9 @@ button:active
     background: rgb(250, 250, 250);
 }
 
-@media screen and (width : 400px) {
-    .main-div
-    {
-        width: 100%;
-        height: 90vh;
+@media screen and (max-width : 350px) {
     .main-ctn
     {
         width: 100%;
-        height: 90vh;
     }
 }
