--- a/calculator-level-3.css
+++ b/calculator-level-3.css
@@ -2,7 +2,7 @@ body
 {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
 
@@ -14,7 +14,7 @@ body
     width: 100%;
     height: 100vh;
 
-    background: rgb(180, 180, 180);
+    background: rgb(160, 160, 160);
 
     display: flex;
 
@@ -22,7 +22,7 @@ body
 }
 .main-ctn
 {
-    width: 300px;
+    width: 400px;
     height: 100vh;
 
     background: rgb(30, 30, 30);
@@ -151,13 +151,37 @@ button:hover
 {
     background: rgb(180, 180, 180)
 }
-button:active 
+button:active
 {
     background: rgb(250, 250, 250);
 }
 
-@media screen and (max-width : 400px) {
+@media screen and (max-width: 750px) {
+    .main-ctn 
+    {
+        width: 60%;
+    }
+}
+@media screen and (max-width: 650px) {
     .main-ctn
+    {
+        width: 410px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .main-ctn
+    {
+        width: 390px;
+    }
+}
+@media screen and (max-width: 450px) {
+    .main-ctn 
+    {
+        width: 85%;
+    }
+}
+@media screen and (max-width: 430px) {
+    .main-ctn 
     {
         width: 100%;
     }
